Issue GRUND-221: Adjustment to header title spacing.

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -161,10 +161,9 @@
   }
 
   &--box-text-title {
-
-    display: inline;
     font-size: 24px;
     font-weight: 600;
+    margin-bottom: $layout-spacing;
 
     @include breakpoint($breakpoint-largedesk) {
       font-size: 26px;
